--- a/Cenfotec.Components.Web/Cenfotec.Components.Web.csproj
+++ b/Cenfotec.Components.Web/Cenfotec.Components.Web.csproj
@@ -143,9 +143,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -187,7 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -201,6 +203,16 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Cenfotec.Components.AS\Cenfotec.Components.AS.csproj">
+      <Project>{c37ccf5d-97bf-45f9-aa7b-6c866072c37d}</Project>
+      <Name>Cenfotec.Components.AS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cenfotec.Components.Entities\Cenfotec.Components.Entities.csproj">
+      <Project>{2be70a35-121b-4f91-a301-73a50430c8b8}</Project>
+      <Name>Cenfotec.Components.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
