Prueba mantenimiento y consulta de usuario. Estructura lista

--- a/Cenfotec.Components.AD/Cenfotec.Components.AD.csproj
+++ b/Cenfotec.Components.AD/Cenfotec.Components.AD.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consltas\ConsultasAD.cs" />
     <Compile Include="Mantenimientos\MantenimientosAD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,10 +61,7 @@
       <Name>Cenfotec.Components.Modelo</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Consltas\Entrada\" />
-    <Folder Include="Consltas\Salida\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
