--- a/Cenfotec.Components.LN/Cenfotec.Components.LN.csproj
+++ b/Cenfotec.Components.LN/Cenfotec.Components.LN.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consultas\ConsultasLN.cs" />
     <Compile Include="Mantenimientos\MantenimientosLN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -53,8 +54,6 @@
       <Name>Cenfotec.Components.Entities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Consultas\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
