--- a/Cenfotec.Components.Modelo/Cenfotec.Components.Modelo.csproj
+++ b/Cenfotec.Components.Modelo/Cenfotec.Components.Modelo.csproj
@@ -64,6 +64,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Modelo.edmx</DependentUpon>
     </Compile>
+    <Compile Include="PA_CONS_USER_X_ID_Result.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
