--- a/Cenfotec.Components.Modelo/Cenfotec.Components.Modelo.csproj
+++ b/Cenfotec.Components.Modelo/Cenfotec.Components.Modelo.csproj
@@ -67,6 +67,12 @@
     <Compile Include="PA_CONS_USER_X_ID_Result.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
+    <Compile Include="PA_RET_TRACK_X_ID_Result.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PA_RET_TRACK_X_USER_Result.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
