--- a/Cenfotec.Components.Web/Cenfotec.Components.Web.csproj
+++ b/Cenfotec.Components.Web/Cenfotec.Components.Web.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\TrackModels.cs" />
     <Compile Include="Models\UserModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -211,13 +212,13 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Cenfotec.Components.AS\Cenfotec.Components.AS.csproj">
-      <Project>{c37ccf5d-97bf-45f9-aa7b-6c866072c37d}</Project>
-      <Name>Cenfotec.Components.AS</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Cenfotec.Components.Entities\Cenfotec.Components.Entities.csproj">
       <Project>{2be70a35-121b-4f91-a301-73a50430c8b8}</Project>
       <Name>Cenfotec.Components.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cenfotec.Components.LN\Cenfotec.Components.LN.csproj">
+      <Project>{71e4c731-732d-4cd1-93db-51b4655c208a}</Project>
+      <Name>Cenfotec.Components.LN</Name>
     </ProjectReference>
     <ProjectReference Include="..\Cenfotec.Components.Modelo\Cenfotec.Components.Modelo.csproj">
       <Project>{7558cc8a-40ad-4599-a924-dbd3ac16e6ce}</Project>
