--- a/Cenfotec.Components.Modelo/App.Config
+++ b/Cenfotec.Components.Modelo/App.Config
@@ -6,9 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="components_bdEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LIND;initial catalog=components_bd;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  
-  <add name="components_bdEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=components.database.windows.net;initial catalog=COMPONENTS_DB;user id=Mario;password=Maximus17;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  
+    <add name="components_bdEntities" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=components.database.windows.net;initial catalog=COMPONENTS_DB;user id=Mario;password=Maximus17;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
