--- a/Cenfotec.Components.Entities/Cenfotec.Components.Entities.csproj
+++ b/Cenfotec.Components.Entities/Cenfotec.Components.Entities.csproj
@@ -51,9 +51,11 @@
     <Compile Include="Consultas\Salida\RetrieveUserXIdRes.cs" />
     <Compile Include="Generales\EntradaBase.cs" />
     <Compile Include="Generales\RespuestaBase.cs" />
+    <Compile Include="Mantenimientos\Entrada\DeleteTrackByUserReq.cs" />
     <Compile Include="Mantenimientos\Entrada\SaveTrackReq.cs" />
     <Compile Include="Mantenimientos\Entrada\SaveTrackXUserReq.cs" />
     <Compile Include="Mantenimientos\Entrada\SaveUserReq.cs" />
+    <Compile Include="Mantenimientos\Salida\DeleteTrackByUserRes.cs" />
     <Compile Include="Mantenimientos\Salida\SaveTrackRes.cs" />
     <Compile Include="Mantenimientos\Salida\SaveTrackXUserRes.cs" />
     <Compile Include="Mantenimientos\Salida\SaveUserRes.cs" />
